--- a/template/start.html
+++ b/template/start.html
@@ -13,7 +13,7 @@
 <body>
 <header>
   <nav class="blue" role="navigation">
-	  <div class="nav-wrapper container" margin="0"><a id="logo-container" href="/"><img src="{{.Logo}}" alt="Logo" style="height:90%"/></a>
+	  <div class="nav-wrapper container" margin="0"><a id="logo-container" href="/"><img src="/res/logo.png" alt="Logo" style="height:90%"/></a>
       <ul class="right hide-on-med-and-down">
 	      <li><a href="/{{if not .Datafields}}extended{{end}}">{{.ChangeSearchType}}</a></li>
       </ul>
